DSND-2874: Update deserialise error message